<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".presentation.ui.term_details.TermDetailsFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/subject"
        android:textColorHint="@color/red_500"
        app:boxStrokeColor="@color/red_500">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/red_500" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/definition"
        android:textColorHint="@color/red_500"
        app:boxStrokeColor="@color/red_500">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/definition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/question"
            android:textColor="@color/red_500" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/translation"
        android:textColorHint="@color/red_500"
        app:boxStrokeColor="@color/red_500">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/translation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/axiom"
            android:textColor="@color/red_500" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/save_notes"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/your_notes"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_done"
        android:textColorHint="@color/red_500">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_notes"
            android:textColor="@color/red_500" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>