<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".presentation.ui.settings.SettingsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/language"
        android:textColor="@color/red_500"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/russian_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/red_500"
            android:checked="true"
            android:text="@string/russian"
            android:textColor="@color/red_500"
            android:textSize="16sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/english_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/red_500"
            android:text="@string/english"
            android:textColor="@color/red_500"
            android:textSize="16sp" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/apply"
        android:textAllCaps="false"
        android:textColor="@color/red_500"
        app:cornerRadius="8dp"
        app:strokeColor="@color/grey"
        app:strokeWidth="1dp" />

</LinearLayout>